Text alignment fixed

--- a/style.css
+++ b/style.css
@@ -254,6 +254,7 @@ body{
     }
     .day-content{
         flex-direction: column;
+        text-align: center;
     }
 
     .wrap{
